syntax = 'proto3';

message Empty {}
message Subject {
    string _id = 1;
    string address = 2;
    string size = 3;
    string light = 4;
    string vision = 5;
    string flow = 6;
    string lng = 7;
    string lat = 8;
    string link = 9;
    Package packages = 10;
    Discount discount = 11;
    Area area = 12;
    repeated Calendar calendars = 13;
}
message Discount {
    string default = 1;
    string startDate = 2;
    string endDate = 3;
    string value = 4;
}
message Package {
    string name = 1;
    string price = 2;
}
message Area {
    string _id = 1;
    string name = 2;
    string lng = 3;
    string lat = 4;
}
message Calendar {
    string startDate = 1;
    string endDate = 2;
    string contract = 3;
}
message TimeStamp {
    string when = 1;
    ByUser by = 2;
}
message ByUser {
    string _id = 1;
    string name = 2;
    string email = 3;
}
message Request {
    string options = 1;
    string methodName = 2;
}
message Response {
    int32 code = 1;
    string message = 2;
    string data = 3;
}
message Result {
    string msg = 1;
}
message Filter {
    string options = 1;
}
message List {
    int32 code = 1;
    string message = 2;
    Pagination data = 3;
}
message Pagination {
    int32 skip = 1;
    int32 limit = 2;
    int32 count = 3;
    int32 total = 4;
    repeated Subject list_data = 5;
}

service OOHService {
    rpc List (Filter) returns (List) {}
    rpc Fetch (Request) returns (Response) {}
}
